# CI-CD-practyce

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
sources/: square.py
tests/: test_square.py
